# relational-graph-conditioned-diffusion

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/relgdiff/data/: sample_structures.py  tables_to_heterodata.py  update_graph.py  utils.py
src/relgdiff/embedding_generation/: embeddings.py  hetero_gnns.py
src/relgdiff/generation/: autoencoder.py  diffusion.py  utils_train.py
src/relgdiff/generation/tabsyn/: diffusion_utils.py  latent_utils.py  layers.py  model.py  sample.py  tabular_unet.py
src/relgdiff/generation/tabsyn_utils/: data.py  env.py
src/relgdiff/generation/vae/: model.py
src/scripts/: benchmark.py  evaluate_utility.py  preprocess_data.py  privacy_check.py  sample.py  sample_baseline.py  train.py  train_baseline.py
