[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "relgdiff"
version = "0.0.1"
authors = [
  { name="Valter Hudovernik", email="valter.hudovernik@gmail.com" },
]
description = "Relational Data Generation with Graph Neural Networks and Latent Diffusion Models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ValterH/relational-graph-conditioned-diffusion"
Issues = "https://github.com/ValterH/relational-graph-conditioned-diffusion/issues"

[tool.setuptools.packages]
find = { "where" = ["src"] }